re PR c++/25300 (ICE with g++.dg/template/inherit.C)

PR c++/25300
	* tree.c (build_qualified_name): Return error_mark_node for
	erroneous input.
	PR c++/25300
	* g++.dg/template/inherit.C: Do not use a generic error message.

From-SVN: r108414